with the latest versions of Password Safe. For a short description of
Password Safe, please see the accompanying README.txt file. For more 
information on the product and the project, please visit
http://passwordsafe.sourceforge.net. Details about changes to older
releases may be found in the file ChangeLog.txt.

Bugs fixed in 3.14.01
=====================
[2088540] Showing Dragbar is now again independent of displaying the
Toolbar.
[2085103] New database no longer created as R/O.
[2085089] Database field in "Safe combination Entry" dialog no longer
looses focus to passphrase field after each character change.

Changes to Existing Features in 3.14.01
=======================================


New Features for 3.14.01
========================


Bugs fixed in 3.14
==================
[2071489] off-by-one bug in range for generated passwords fixed.
[1978486] The R/W status of a database is unchanged if it is already 
open and the user cancels an open file action.
[1978475] Clear clipboard options are no longer interchanged.
[1970652] No longer crashes when user exits search for non-existant
database.
[1966718] Text in 'Notes" now has horizontal scroll bar during Add.
[1959193] PWS now honors the read-only command line parameter (-r)
for first file open. Afterwards, the behavior is determined by the R/O
open preference or user selecting read-only at open time.
[1954268] Aliases and shortcuts now processed correctly during merge.
[1933174, 2015132] Reports from Import (Text or XML), Compare, Merge
and Find are no longer written to disk by default.
[] Expired icon now correct after password change.
[] Current tree state is now updated correctly upon exit (Thanks to
Norman)
[] Correct display of tree items on restore from minimize.

Changes to Existing Features in 3.14
====================================
[1958303] TreeView buttons (+/-) now larger without significantly
increasing the visible bitmap image.  Also, now transparent.