@@ -106,7 +106,7 @@ BEGIN
   IDS_PASSWORDEXPIRYDATE  "Password Expiry Date"
   IDS_PASSWORDEXPIRYDATEINT "Password Expiry Interval"
   IDS_EXPIRYDATETIME      "Expiry Date/Time"
-  IDS_PWHIST              "Password History"
+  IDS_PWHISTORY           "Password History"
   IDS_LASTMODIFIED        "Last Modified"
   IDS_PWPOLICY            "Password Policy"
   IDS_COPYTITLE           "Group\tTitle\tUsername\tPassword Expiry Date\r\n"
@@ -288,7 +288,7 @@ STRINGTABLE
 BEGIN
   IDS_PICKMERGEFILE       "Please Choose a Database to Merge"
   IDS_MERGINGDATABASE     "Merging database: %s"
-  IDS_MERGECONFLICTS      "Conflicting entries for |%s|%s|%s|. Added merged entry as |%s|%s|%s|"
+  IDS_MERGECONFLICTS      "Conflicting entries for |%s|%s|%s|. Added merged entry as |%s|%s|%s|. Differing field(s): %s"
   IDS_MERGECOMPLETED      "Merge completed: %d %s added\r\n(%d %s, %d %s, %d %s)"
   IDS_MERGECOMPLETED2     "Merge Completed"
 END
